fix the sytling on mobile

--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ html, body {
                 width: 0;
           }
           to {
-                width: 17em;
+                width: 11em;
           }
     }
 }
